[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
sqlmodel = "^0.0.14"
pyjwt = "^2.8.0"
uvicorn = "^0.24.0.post1"
numpy = "^1.26.2"
scipy = "^1.11.4"
cryptography = "^41.0.7"
gunicorn = "^21.2.0"
cachetools = "^5.3.2"
alembic = "^1.13.0"
mollie-api-python = "^3.6.0"
psycopg2-binary = "^2.9.9"
python-dateutil = "^2.8.2"
pytz = "^2023.3.post1"
boto3 = "^1.34.7"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
pydub = "^0.25.1"
librosa = "^0.10.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 89
target_version = ["py310"]

[tool.isort]
profile = "black"
line_length = 89