[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "0.104.1"
sqlmodel = "0.0.14"
pyjwt = "2.8.0"
uvicorn = "0.24.0.post1"
numpy = "1.26.4"
scipy = "1.12.0"
cryptography = "41.0.7"
gunicorn = "21.2.0"
cachetools = "5.3.2"
alembic = "1.13.1"
mollie-api-python = "3.6.0"
psycopg2-binary = "2.9.9"
python-dateutil = "2.8.2"
pytz = "2023.4"
boto3 = "1.34.44"
python-multipart = "0.0.6"
python-dotenv = "1.0.1"
pydub = "0.25.1"
librosa = "0.10.1"
absl-py = "2.1.0"
annotated-types = "0.6.0"
anyio = "3.7.1"
astunparse = "1.6.3"
audioread = "3.0.1"
auditok = "0.2.0"
black = "23.12.1"
botocore = "1.34.44"
build = "1.0.3"
cachecontrol = "0.13.1"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
contourpy = "1.2.0"
crashtest = "0.4.1"
cycler = "0.12.1"
decorator = "5.1.1"
distlib = "0.3.8"
dulwich = "0.21.7"
exceptiongroup = "1.2.0"
fastjsonschema = "2.19.1"
filelock = "3.13.1"
flatbuffers = "23.5.26"
fonttools = "4.49.0"
gast = "0.5.4"
google-auth = "2.28.0"
google-auth-oauthlib = "1.2.0"
google-pasta = "0.2.0"
grpcio = "1.60.1"
h11 = "0.14.0"
h5py = "3.10.0"
idna = "3.6"
importlib-metadata = "7.0.1"
installer = "0.7.0"
isort = "5.13.2"
jaraco-classes = "3.3.1"
jmespath = "1.0.1"
joblib = "1.3.2"
keras = "2.15.0"
keyring = "24.3.0"
kiwisolver = "1.4.5"
lazy-loader = "0.3"
libclang = "16.0.6"
llvmlite = "0.42.0"
mako = "1.3.2"
markdown = "3.5.2"
markupsafe = "2.1.5"
matplotlib = "3.8.3"
ml-dtypes = "0.2.0"
more-itertools = "10.2.0"
msgpack = "1.0.7"
mypy-extensions = "1.0.0"
numba = "0.59.0"
oauthlib = "3.2.2"
opt-einsum = "3.3.0"
packaging = "23.2"
panda = "0.3.1"
pandas = "1.4.1"
pathspec = "0.12.1"
pexpect = "4.9.0"
pillow = "10.2.0"
pkginfo = "1.9.6"
pooch = "1.8.0"
protobuf = "4.25.3"
ptyprocess = "0.7.0"
pyasn1 = "0.5.1"
pyasn1-modules = "0.3.0"
pycparser = "2.21"
pydantic = "2.6.1"
pydantic-core = "2.16.2"
pyparsing = "3.1.2"
pyproject-hooks = "1.0.0"
rapidfuzz = "3.6.1"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
requests-toolbelt = "1.0.0"
resampy = "0.4.2"
rsa = "4.9"
s3transfer = "0.10.0"
scikit-learn = "1.4.1.post1"
shellingham = "1.5.4"
six = "1.16.0"
sklearn = "0.0"
sniffio = "1.3.0"
soundfile = "0.12.1"
soxr = "0.3.7"
sqlalchemy = "2.0.27"
starlette = "0.27.0"
tensorboard = "2.15.2"
tensorboard-data-server = "0.7.2"
tensorflow = "2.15.0"
tensorflow-estimator = "2.15.0"
tensorflow-io-gcs-filesystem = "0.36.0"
tensorflow-macos = "2.15.0"
termcolor = "2.4.0"
threadpoolctl = "3.3.0"
tomli = "2.0.1"
tomlkit = "0.12.3"
tqdm = "4.16.0"
trove-classifiers = "2024.1.31"
typing-extensions = "4.9.0"
urllib3 = "2.0.7"
utils = "1.0.2"
virtualenv = "20.25.0"
werkzeug = "3.0.1"
wrapt = "1.14.1"
xattr = "0.10.1"
zipp = "3.17.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 89
target_version = ["py310"]

[tool.isort]
profile = "black"
line_length = 89